# Copyright 2018-2020 ETH Zurich
# Andreas Kurth <akurth@iis.ee.ethz.ch>
#
# SPDX-License-Identifier: (Apache-2.0 OR MIT)

[package]
name = "slm_conv"
version = "0.3.2"
authors = ["Andreas Kurth"]
edition = "2018"

[dependencies]
clap = "2.32.0"
regex = "1"
strfmt = "0.1.6"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
